agragamos sitio de twicth RafoSNW

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi sitio web
-        Sigueme en twist como RafoSNW!!
+        Hola amigos & amigas esta es mi segunda prueba de repositorio GITHUP
+        Sigueme en twist como RafoSNW!! twich.tv/rafosnw
     </p>
 
 </body>
